# mini-etl-pandas

./: README.MD  etl.py  pipeline.py  pyproject.toml
